logs/Slang/generated/hdlconv/hdlconvertor_p77.sv.log
name: hdlconvertor_p77
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p77.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p77.sv:1:14: error: forward typedef 'type_identifier' does not resolve to a data type
typedef enum type_identifier;
             ^
